tests/cli/co2cc/simple_diagnostic/stderr.snapshot
Error: unresolved name nonexistent
   ╭─[ broken.c:1:25 ]
   │
 1 │ int main(void) { return nonexistent; }
   │                         ─────┬─────  
   │                              ╰─────── unresolved name nonexistent
───╯
